dashboard UI & other fixes

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="main-content">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+    <footer class="bg-white text-center py-3 position-fixed w-100 bottom-0 border-top">
+        copyright 2025 &copy <span class="primary-text fw-semibold">SHOPPERS</span>.
+    </footer>
+</div>
