--- a/frontend/src/app/core/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-white border-bottom">
+<nav class="navbar navbar-expand-lg bg-white border-bottom fixed-top">
     <div class="container-fluid container">
       <a class="navbar-brand fw-bold fs-3" [routerLink]="''">
         <img src="assets/S.png" width="40px" class="rounded-2"> <span class="ms-1">HOPPERS</span> </a>
