--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -1,3 +1,16 @@
-<div class="container mt-5">
-    <app-product-list></app-product-list>
+<div class="container">
+
+    <div class="row rounded-2 primary-bg bg-gradient mb-3 position-relative" style="height: 400px;">
+        <div class="col-xl-6 d-flex ps-5 justify-content-center flex-column">
+            <h1 class="text-white showcase-text">Welcome to <span class="fw-bold">SHOPPERS</span></h1>
+            <p class="text-white fw-semibold">Enjoy Latest Products, Upto <span class="fs-1"><i>40%</i> off.</span></p>
+        </div>
+        <div class="col-xl-6">
+            <img class="img-fluid showcase-img position-absolute" src="assets/showcase.png" alt="showcase" style="right: 0; top:-20px;">
+        </div>
+    </div>
+    <div class="my-5">
+        <h3>LATEST PRODUCTS :</h3>
+        <app-product-list></app-product-list>
+    </div>
 </div>
