--- a/frontend/src/app/features/products/product-list/product-list.component.html
+++ b/frontend/src/app/features/products/product-list/product-list.component.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="row g-3" *ngIf="!products || products.length === 0">
+<div class="row g-3 mt-2" *ngIf="!products || products.length === 0">
     <div class="col-xl-4" *ngFor="let i of [1,2,3,4,5,6]">
       <div class="card border-0">
         <ngx-skeleton-loader
