Confirm Modal & Cancel Order

--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -9,8 +9,9 @@
             <img class="img-fluid showcase-img position-absolute" src="assets/showcase.png" alt="showcase" style="right: 0; top:-20px;">
         </div>
     </div>
-    <div class="my-5">
-        <h3>LATEST PRODUCTS :</h3>
+    <div class="my-5 pt-5">
+        <br>
         <app-product-list></app-product-list>
+        <br>
     </div>
 </div>
