--- a/frontend/src/app/features/order/order-details/order-details.component.html
+++ b/frontend/src/app/features/order/order-details/order-details.component.html
@@ -7,7 +7,7 @@
                         <h4 class="card-title">{{ product.name }} </h4>
                         <div class="d-flex">
                             <img src="{{ product.image }}" class="rounded-2 me-4" alt="Product Image" style="width:100px;" >
-                            <div>
+                            <div class="w-100">
                                 <h5><i class="fa fa-indian-rupee"></i> {{ product.price }}</h5>
                                 <p class="mb-0">{{ product.brand }}</p>
                                 <span class="badge bg-primary fs-12">{{ product.category }}</span>
@@ -34,10 +34,13 @@
                         {{ order.shippingInfo?.state }}, {{ order.shippingInfo?.country }} -
                         {{ order.shippingInfo?.zipCode }}
                     </p>
+                    <button class="btn btn-danger btn-sm" *ngIf="order.status !== 'Cancelled'" (click)="CancelOrder('Cancelled', order._id)">Cancel Order</button>
                 </div>
             </div>
             <div class="card mt-2">
                 <div class="card-body">
+                    <p class="mb-1">Payment Status : <span class="fw-semibold">{{ order.paymentMethod }}</span></p>
+                    <p class="mb-1">Payment Status : <span>{{ order.paymentStatus }}</span></p>
                     <p class="mb-1">Total items : <span class="fw-semibold"> {{ fetchedProducts.length }}</span></p>
                     <p class="mb-1">Total Price : <span class="fw-semibold"><i class="fa fa-indian-rupee"></i> {{ order.totalAmount }}</span></p>
                     <span class="text-success fw-semibold">Free Delivery</span> <br>
