--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -1,15 +1,15 @@
 <div class="container">
 
-    <div class="row rounded-2 primary-bg bg-gradient mb-3 position-relative" style="height: 400px;">
+    <div class="row primary-bg bg-gradient mb-3 position-relative showcase">
         <div class="col-xl-6 d-flex ps-5 justify-content-center flex-column">
-            <h1 class="text-white showcase-text">Welcome to <span class="fw-bold">SHOPPERS</span></h1>
+            <h1 class="text-white showcase-text mt-2">Welcome to <span class="fw-bold">SHOPPERS</span></h1>
             <p class="text-white fw-semibold">Enjoy Latest Products, Upto <span class="fs-1"><i>40%</i> off.</span></p>
         </div>
         <div class="col-xl-6">
             <img class="img-fluid showcase-img position-absolute" src="assets/showcase.png" alt="showcase" style="right: 0; top:-20px;">
         </div>
     </div>
-    <div class="my-5 pt-5">
+    <div class="my-2 my-md-5 pt-0 pt-md-5">
         <br>
         <app-product-list></app-product-list>
         <br>
