--- a/frontend/src/app/features/auth/sign-up/sign-up.component.html
+++ b/frontend/src/app/features/auth/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="row h-100 align-items-center justify-content-center">
-        <div class="col-6">
+        <div class="col-lg-6">
             <div class="card">
                 <div class="card-body p-5 px-6">
                     <h4 class="primary-text text-center">Sign Up Here</h4>
