--- a/frontend/src/app/features/order/order-list/order-list.component.html
+++ b/frontend/src/app/features/order/order-list/order-list.component.html
@@ -85,14 +85,14 @@
         </div>
       
         <div class="pagination-controls">
-          <button class="btn btn-sm btn-primary" (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1">Previous</button>
+          <button class="btn btn-sm btn-secondary" (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1">Previous</button>
           <span class="mx-2">Page {{ currentPage }} of {{ totalPages }}</span>
-          <button class="btn btn-sm btn-primary" (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">Next</button>
+          <button class="btn btn-sm btn-secondary" (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">Next</button>
         </div>
       </div>
-      
-
-      <div class="card" *ngIf="!isLoading && filteredOrders.length === 0">
+    </div>
+    <div class="col-xl-9" *ngIf="!isLoading && filteredOrders.length === 0">
+      <div class="card" >
         <div class="card-body">
           <div class="text-center fw-semibold">No Orders</div>
         </div>
