--- a/frontend/src/app/features/order/order-details/order-details.component.html
+++ b/frontend/src/app/features/order/order-details/order-details.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div id="invoice-content" class="container mt-4">
     <div class="row">
         <div class="col-xl-8">
             <div class="card">
@@ -44,7 +44,7 @@
                     <p class="mb-1">Total items : <span class="fw-semibold"> {{ fetchedProducts.length }}</span></p>
                     <p class="mb-1">Total Price : <span class="fw-semibold"><i class="fa fa-indian-rupee"></i> {{ order.totalAmount }}</span></p>
                     <span class="text-success fw-semibold">Free Delivery</span> <br>
-                    <button class="btn secondary-btn btn-sm mt-3"><i class="fa fa-download"></i> Download Invoice</button>
+                    <button class="btn secondary-btn btn-sm mt-3" (click)="generateInvoice()"><i class="fa fa-download"></i> Download Invoice</button>
                 </div>
             </div>
         </div>
