--- a/frontend/src/app/features/order/thankyou-order/thankyou-order.component.html
+++ b/frontend/src/app/features/order/thankyou-order/thankyou-order.component.html
@@ -1,7 +1,7 @@
 <div class="card container text-center mt-5 pt-5 d-flex align-items-center justify-content-center flex-column">
     <i class="fa-regular fa-circle-check primary-text" style="font-size: 100px;"></i>
-    <h2 class="primary-text fw-semibold mt-5">Order Placed Successfully!</h2>
-    <h1 class="primary-text fw-bold">SHOPPERS</h1>
+    <h1 class="primary-text fw-bold mt-5">SHOPPERS</h1>
+    <h2 class="fw-semibold ">Order Placed Successfully!</h2>
     <p class="mt-4">You will recieve an email regarding your order confirmation.</p>
     <p>You will recieve updates regarding your order on your registered email</p>
     <p>For any querries pease reach out to   <a href="mailto:support@shoppers.com"> support&commat;shoppers.com</a></p>
