--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,6 +2,6 @@
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
     <footer class="bg-white text-center py-3 position-fixed w-100 bottom-0 border-top">
-        copyright 2025 &copy <span class="primary-text fw-semibold">SHOPPERS</span>.
+        copyright 2025 &copy <span class="primary-text fw-semibold">{{ title }}</span>.
     </footer>
 </div>
