--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div>
-    <div class="row mb-3">
+    <div class="mb-3">
         <ngb-carousel>
             <ng-template ngbSlide>
                 <div class="bg-black mxh-500">
                     <div class="container">
                         <div class="row align-items-center justify-content-center">
                             <div class="col-xl-6">
-                                <h1 class="text-light"><span class="showcase-text">NIKE</span> Recent Collection</h1>
+                                <h1 class="text-light mt-5"><span class="showcase-text">NIKE</span> Recent Collection</h1>
                                 <p class="text-light">grab awesome deals, <span class="fs-1 primary-text">40% OFF</span> on nike shoes, starting today.</p>
                             </div>
                             <div class="col-xl-6 d-flex justify-content-center">
@@ -21,7 +21,7 @@
                     <div class="container">
                         <div class="row align-items-center justify-content-center">
                             <div class="col-xl-6">
-                                <h1 class="text-light"><span class="showcase-text">PUMA</span> newly launches!</h1>
+                                <h1 class="text-light mt-5"><span class="showcase-text">PUMA</span> newly launches!</h1>
                                 <p class="text-light">SPORTS & SNEAKERS collection <span class="fs-1 primary-text">15-46% Off</span> on PUMA shoes, starting today.</p>
                             </div>
                             <div class="col-xl-6 d-flex justify-content-center">
@@ -36,7 +36,7 @@
                     <div class="container">
                         <div class="row align-items-center justify-content-center">
                             <div class="col-xl-6">
-                                <h1 class="text-light"><span class="showcase-text">Adidas</span> New launches</h1>
+                                <h1 class="text-light mt-5"><span class="showcase-text">Adidas</span> New launches</h1>
                                 <p class="text-light"><b>LIMITED EDITION</b>, Upto <span class="fs-1 primary-text">20% OFF</span> on adidas shoes & sneakers.</p>
                             </div>
                             <div class="col-xl-6 d-flex justify-content-center">
