--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div id="global-loader" style="display: none;">
+    <div class="spinner"></div>
+</div>
 <div class="main-content">
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
