--- a/frontend/src/app/features/order/order-list/order-list.component.html
+++ b/frontend/src/app/features/order/order-list/order-list.component.html
@@ -36,7 +36,7 @@
             
             <div>
               <h6>{{ order.shippingInfo?.addressName }}</h6>
-              <p class="fs-12">Price: <b>Rs. {{ order.totalAmount }}</b></p>
+              <p class="fs-12">Price: <b>{{ order.totalAmount | price:'Rs.' }}</b></p>
             </div>
             
             <div class="me-5">
@@ -69,8 +69,8 @@
                   [src]="item.productData.product.image" 
                   alt="Product Image">
                 <b>{{ item.productData.product.name }}</b>  
-                Quantity: <b>{{ item.quantity }}</b>  
-                Price: Rs. <b>{{ item.productData.product.price }}</b>
+                <span class="ms-3">Quantity: <b>{{ item.quantity }}</b></span>
+                <span class="ms-3">Price: <b>{{ item.productData.product.price | price:'Rs.' }}</b></span>
               </div>
               <ng-template #loading>
                 Loading product details...
