--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -206,3 +206,31 @@ a{
         height: 140px;
     }
 }
+
+/* LOADER */
+
+#global-loader {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.5);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .spinner {
+    width: 80px;
+    height: 80px;
+    border: 5px solid #ddd;
+    border-top: 5px solid var(--primary-color);
+    border-radius: 50%;
+    animation: spin 0.8s linear infinite;
+  }
+
+  @keyframes spin {
+    to { transform: rotate(360deg); 
+    }
+  }
